<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black"/>
    <TextView
        android:id="@+id/schedulereported"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_marginTop="15dp"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:gravity="center"/>

    <Button
        android:id="@+id/save_report"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/round"
        app:backgroundTint="@color/black"
        android:text="@string/add"
        android:gravity="center"
        android:onClick="launchHumourPage"
        android:textSize="20dp"
        android:layout_marginLeft="340dp"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/amount"
        android:text="@string/empty"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_marginTop="100dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

<ListView
    android:id="@+id/listcalendar"
    android:layout_marginTop="150dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" />

</RelativeLayout>