<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ManageHumour">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:onClick="backarrow"
        android:background="@drawable/twotone_arrow_back_white_18"/>
    <TextView
        android:id="@+id/humourmonth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/date"
        android:textColorHint="@color/white"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="150dp"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:gravity="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="80dp"
        android:paddingLeft="20dp"
        android:background="@color/black">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="14dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unknow"
                android:textSize="40dp"
                android:clickable="true"
                android:onClick="addunknowhumour"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/amountunknow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empty"
                android:layout_gravity="center"
                android:textSize="20dp"
                android:textColor="@color/white"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/angry"
                android:textSize="40dp"
                android:clickable="true"
                android:onClick="addangryhumour"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/amountangry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empty"
                android:layout_gravity="center"
                android:textSize="20dp"
                android:textColor="@color/red"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/frowning"
                android:textSize="40dp"
                android:clickable="true"
                android:onClick="addfrowninghumour"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/amountfrowning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empty"
                android:layout_gravity="center"
                android:textSize="20dp"
                android:textColor="@color/magenta"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/neutral"
                android:textSize="40dp"
                android:clickable="true"
                android:onClick="addneutralhumour"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/amountneutral"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empty"
                android:layout_gravity="center"
                android:textSize="20dp"
                android:textColor="@color/green"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/slightly"
                android:textSize="40dp"
                android:clickable="true"
                android:onClick="addslightlyhumour"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/amountslightly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empty"
                android:layout_gravity="center"
                android:textSize="20dp"
                android:textColor="@color/cyan"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/grinning"
                android:textSize="40dp"
                android:clickable="true"
                android:onClick="addgrinninghumour"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/amountgrinning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empty"
                android:layout_gravity="center"
                android:textSize="20dp"
                android:textColor="@color/yellow"/>
        </LinearLayout>


    </LinearLayout>

</RelativeLayout>